@@ -13,7 +13,7 @@
 # RCS: @(#) $Id$
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
-    package require tcltest
+    package require tcltest 2
     namespace import -force ::tcltest::*
 }
 
@@ -29,13 +29,15 @@ if {$tcl_platform(platform) == "windows"} {
 }
 
 # determine the current locale
-set old [testlocale all]
-if {![string compare [testlocale all ""] "English_United States.1252"]} {
-	# error messages from registry package are already localized.
-    set ::tcltest::testConstraints(english) 1
+if { [string compare {} [info commands testlocale]] } {
+    set old [testlocale all]
+    testConstraint english \
+	[string equal [testlocale all ""] "English_United States.1252"]
+    testlocale all $old
+    unset old
+} else {
+    testConstraint english false
 }
-testlocale all $old
-unset old
 
 set hostname [info hostname]
 
